setup build script

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,18 +15,18 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 1.0.0
-root_package = com.example
-mod_id = modid
-mod_name = Mod Name
+mod_version = 2.0.0
+root_package = snownee.minieffects
+mod_id = minieffects
+mod_name = Mini Effects
 
 # Mod Metadata (Optional)
-mod_description =
+mod_description =Add a toggle to show/hide effects view in inventory.
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors =
-mod_credits =
+mod_authors = Snownee,ZZZank
+mod_credits = Snownee
 mod_logo_path =
 
 # Mapping Properties
@@ -82,7 +82,7 @@ change_minecraft_sources = false
 # Class name is configurable with the `tag_class_name` property
 # Tag properties can be stated in the `tags.properties` file, references are allowed
 use_tags = true
-tag_class_name = ${root_package}.${mod_id}.Tags
+tag_class_name = snownee.minieffects.Tags
 
 # Access Transformers
 # A way to change visibility of Minecraft's classes, methods and fields
@@ -97,7 +97,7 @@ access_transformer_locations = ${mod_id}_at.cfg
 # Powerful tool to do runtime description changes of classes
 # Wiki: https://github.com/SpongePowered/Mixin/wiki + https://github.com/CleanroomMC/MixinBooter/ + https://cleanroommc.com/wiki/forge-mod-development/mixin/preface
 # Only use mixins once you understand the underlying structure
-use_mixins = false
+use_mixins = true
 mixin_booter_version = 9.1
 # A configuration defines a mixin set, and you may have as many mixin sets as you require for your application.
 # Each config can only have one and only one package root.
