--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ change_minecraft_sources = false
 # Class name is configurable with the `tag_class_name` property
 # Tag properties can be stated in the `tags.properties` file, references are allowed
 use_tags = true
-tag_class_name = snownee.minieffects.Tags
+tag_class_name = snownee.minieffects.MiniEffectsInfo
 
 # Access Transformers
 # A way to change visibility of Minecraft's classes, methods and fields
