mark MiniEffects as coremod again to actually inject mixin

--- a/tags.properties
+++ b/tags.properties
@@ -1,3 +1,5 @@
 VERSION = ${mod_version}
 MOD_ID = ${mod_id}
 MOD_NAME = ${mod_name}
+MIXIN_CONFIG = mixins.${mod_id}.json
+MIXIN_REFMAP = mixins.${mod_id}.refmap.json
