--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -25,10 +25,17 @@ repositories {
             includeGroup 'maven.modrinth'
         }
     }
+    maven {
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.dev"
+    }
     mavenLocal() // Must be last for caching to work
 }
 
 dependencies {
+    compileOnly(rfg.deobf("mezz.jei:jei_1.12.2:4.16.1.1012"))
+
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
     // 'group:name:version:classifier' where classifier is optional
