--- a/gradle.properties
+++ b/gradle.properties
@@ -15,13 +15,13 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 2.0.0
+mod_version = 2.0.1
 root_package = snownee.minieffects
 mod_id = minieffects
-mod_name = Mini Effects
+mod_name = Mini Effects - Legacy Extended Life
 
 # Mod Metadata (Optional)
-mod_description =Add a toggle to show/hide effects view in inventory.
+mod_description = Automatically collapses potion effects in inventory screen.
 mod_url =
 mod_update_json =
 # Delimit authors with commas
