--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs = -Xmx3G
 
 # Source Options
 # Use Modern Java(9+) Syntax (Courtesy of Jabel)
-use_modern_java_syntax = false
+use_modern_java_syntax = true
 
 # Compilation Options
 generate_sources_jar = true
 generate_javadocs_jar = false
 
 # Testing
-enable_junit_testing = true
+enable_junit_testing = false
 show_testing_output = false
 
 # Mod Information
