--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -36,6 +36,12 @@ repositories {
 dependencies {
     compileOnly(rfg.deobf("mezz.jei:jei_1.12.2:4.16.1.1012"))
 
+    compileOnly('org.projectlombok:lombok:1.18.34')
+    annotationProcessor('org.projectlombok:lombok:1.18.34')
+
+    testCompileOnly('org.projectlombok:lombok:1.18.34')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.34')
+
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
     // 'group:name:version:classifier' where classifier is optional
