--- a/gradle.properties
+++ b/gradle.properties
@@ -105,10 +105,11 @@ mixin_booter_version = 9.3
 # You should change package root once they are generated
 generate_mixins_json = true
 # Delimit configs with spaces. Should only put configs name instead of full file name
-mixin_configs = ${mod_id}
+mixin_configs = jei
+mixin_config_template = minieffects.mixins.%s.json
 # A refmap is a json that denotes mapping conversions, this json is generated automatically, with the name `mixins.mod_id.refmap.json`
 # Use the property `mixin_refmap` if you want it to use a different name, only one name is accepted
-mixin_refmap = mixins.${mod_id}.refmap.json
+mixin_refmap = minieffects.mixins.refmap.json
 
 # Coremods
 # The most powerful way to change java classes at runtime, it is however very primitive with little documentation.
@@ -117,7 +118,7 @@ mixin_refmap = mixins.${mod_id}.refmap.json
 # You MUST state a class name for `coremod_plugin_class_name` if you are making a coremod, the class should implement `IFMLLoadingPlugin`
 is_coremod = true
 coremod_includes_mod = true
-coremod_plugin_class_name = snownee.minieffects.core.MiniEffectsEarlyMixin
+coremod_plugin_class_name = snownee.minieffects.mixin.MiniEffectsEarlyMixin
 
 # AssetMover
 # Convenient way to allow downloading of assets from official vanilla Minecraft servers, CurseForge, or any direct links
