--- a/tags.properties
+++ b/tags.properties
@@ -1,6 +1,6 @@
 VERSION = ${mod_version}
 MOD_ID = ${mod_id}
 MOD_NAME = ${mod_name}
-MIXIN_CONFIG = mixins.${mod_id}.json
-MIXIN_CONFIG_MOD = mixins.${mod_id}.mod.json
-MIXIN_REFMAP = mixins.${mod_id}.refmap.json
+MIXIN_REFMAP = ${mixin_refmap}
+MIXIN_CONFIGS = ${mixin_configs}
+MIXIN_CONFIG_TEMPLATE = ${mixin_config_template}
