--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -42,6 +42,8 @@ dependencies {
     testCompileOnly('org.projectlombok:lombok:1.18.34')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.34')
 
+    compileOnly(rfg.deobf("curse.maven:ender-utilities-224320:2977010"))
+
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
     // 'group:name:version:classifier' where classifier is optional
