--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -45,7 +45,7 @@ dependencies {
     compileOnly(rfg.deobf("curse.maven:ender-utilities-224320:2977010"))
 
     // too slow to download via CF maven
-    compileOnly(rfg.deobf(file("./gradle/local_libs/Pixelmon-1.12.2-8.4.3-universal.jar")))
+    compileOnly(rfg.deobf(files("./gradle/local_libs/Pixelmon-1.12.2-8.4.3-universal.jar")))
 
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
