--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ plugins {
     id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
     id 'com.modrinth.minotaur' version '2.+' apply false
     id 'org.jetbrains.changelog' version '2.2.0'
+
+    id "de.undercouch.download" version "5.6.0"
 }
 
 apply from: 'gradle/scripts/helpers.gradle'
