--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -88,5 +88,5 @@ task downloadLocalLibs(type: Download) {
 
 if (project.hasProperty("run_number")) {
     println("On GitHub runs #${props.run_number}, enabling download task")
-    tasks.compileJava.dependsOn(downloadLocalLibs)
+    tasks.build.dependsOn(downloadLocalLibs)
 }
