--- a/.github/workflows/gradle_build.yml
+++ b/.github/workflows/gradle_build.yml
@@ -30,6 +30,8 @@ jobs:
           distribution: 'zulu'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Download Libraries
+        run: ./gradlew --no-daemon downloadLocalLibs
       - name: Build the mod
         run: ./gradlew --no-daemon build
       - uses: actions/upload-artifact@v4
