--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -45,7 +45,12 @@ dependencies {
     compileOnly(rfg.deobf("curse.maven:ender-utilities-224320:2977010"))
 
     // too slow to download via CF maven, run "downloadLocalLibs" task instead
-    compileOnly(rfg.deobf(files("./gradle/local_libs/Pixelmon-1.12.2-8.4.3-universal.jar")))
+    [
+        "Pixelmon-1.12.2-8.4.3-universal.jar",
+//        "Thaumcraft-1.12.2-6.1.BETA26.jar"
+    ].forEach {
+        compileOnly(rfg.deobf(files("./gradle/local_libs/" + it)))
+    }
 
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
@@ -81,7 +86,8 @@ dependencies {
 
 task downloadLocalLibs(type: Download) {
     src([
-        "https://edge.forgecdn.net/files/4348/446/Pixelmon-1.12.2-8.4.3-universal.jar"
+        "https://edge.forgecdn.net/files/4348/446/Pixelmon-1.12.2-8.4.3-universal.jar",
+//        "https://edge.forgecdn.net/files/2629/23/Thaumcraft-1.12.2-6.1.BETA26.jar"
     ])
     dest(layout.projectDirectory.dir('./gradle/local_libs/'))
 }
